# SDL-GameOfLife

./: CMakeLists.txt  toolchain-cross-windows.cmake
lib/SDL2/: CMakeLists.txt
src/: Program.cpp  Program.h  main.cpp
src/visual/: ButtonWidget.cpp  ButtonWidget.h  Renderer.cpp  Renderer.h  TextureWrapper.cpp  TextureWrapper.h  Window.cpp  Window.h  WorldWidget.cpp  WorldWidget.h
src/visual/renderer/: TextureWrapper.cpp  TextureWrapper.h
src/visual/widgets/: BaseWindowWidget.cpp  BaseWindowWidget.h  ButtonWidget.cpp  ButtonWidget.h  WorldWidget.cpp  WorldWidget.h
src/world/: Cell.h  World.cpp  World.h  WorldSaver.cpp  WorldSaver.h  WorldUpdater.cpp  WorldUpdater.h
